# psworlds

./: .gitignore  .travis.yml  AUTHORS  COPYING  INSTALL  INSTALL.TXT  MISC.TXT  README.TXT  README.md  configure.ac
Docs/: about.html  controls.html  index.html  links.html  psworlds.html  ships.html  story.html  toc.html
ase2bin/: ase2bin.cpp  ase2bin.dsp  ase2bin.dsw  model.cpp  model.h
psworlds/: possible_config.txt
psworlds/gfx/: alientextures.tga  alientextures2.tga  alientextures3.tga  baseshiptextures1.tga  bigdust1.tga  bigexplo1.tga  bigexplo2.tga  bigexplo3.tga  bigexplo4.tga  bigexplo5.tga  cobratextures.tga  cockpit1left.tga  cockpit1mid.tga  cockpit1rite.tga  cockpit1strip.tga  compasstexture.tga  credlayer1.tga  credlayer2.tga  credlayer3.tga  credlayer4.tga  display1left.tga  display1mid.tga  display1radar.tga  display1rite.tga  dropshipstripes.tga  dropshiptextures.tga  environment.tga  environmentlogo.tga  explo1.tga  explo2.tga  explo3.tga  explo4.tga  garzweilertextures.tga  garzweilertextures2.tga  garzweilertextures3.tga  gunhit1.tga  gunhit2.tga  lensflare.tga  metaltexture1.tga  pssmallfont.tga  (+11 more)
psworlds/gfx/credits/: credits1.tga  (+11 more)
psworlds/missions/: antenna.shp  bagger.shp  baseship.shp  briefing1.brf  briefing2.brf  briefing3.brf  briefing4.brf  broadliner.shp  cobra.shp  description.txt  diver.shp  enfin_revertir.shp  enfin_revertir_strong.shp  ess.shp  freelancer.shp  g-frontarm.shp  g-main.shp  g-reararm.shp  g-second.shp  g-sidearm.shp  g-tower1.shp  g-tower2.shp  g-tower3.shp  g-wheel.shp  hangar.shp  introspective.shp  light.shp  light2.shp  light3.shp  map3.pcx  map4.pcx  map5.pcx  map6.pcx  mission0.txt  mission1.txt  mission2.txt  mission3.txt  mission4.txt  pareil.shp  pareil2.shp  (+5 more)
psworlds/sfx/: briefingmod.mod  turrican2_(eik_remix).mod  utah-saints.mod  wasserfast.mod
psworlds/source/: Makefile  alienlight.cpp  alienlight.h  bitmap.cpp  bitmap.h  briefing.cpp  briefing.h  building.cpp  building.h  camera.cpp  camera.h  cockpit.cpp  cockpit.h  compass.cpp  compass.h  computer.cpp  computer.h  direct.cpp  direct.h  displaylistlist.cpp  displaylistlist.h  fighter.cpp  fighter.h  fonts.cpp  fonts.h  headlight.cpp  headlight.h  homing.cpp  homing.h  intro.cpp  intro.h  matrices.cpp  matrices.h  menu.cpp  menu.h  missile.cpp  missile.h  mission.cpp  mission.h  model.cpp  (+31 more)
src/: Makefile.am  alienlight.cpp  bitmap.cpp  briefing.cpp  briefing.h  building.h  camera.cpp  cockpit.cpp  compass.cpp  computer.cpp  direct.h  fighter.cpp  fonts.cpp  fonts.h  headlight.cpp  headlight.h  homing.cpp  intro.cpp  intro.h  matrices.cpp  matrices.h  menu.cpp  menu.h  missile.cpp  mission.cpp  mission.h  model.cpp  model.h  object.cpp  object.h  objectlist.cpp  other.cpp  other.h  outro.cpp  outro.h  player.cpp  psworlds.cpp  psworlds.h  sound.cpp  sound.h  (+19 more)
(+23 files in other folders)
