bin_PROGRAMS = psworlds
psworlds_CPPFLAGS = \
	$(SDL_CFLAGS) \
	$(SDL_MIXER_CFLAGS) \
	$(LIBCONFIG_CFLAGS) \
	$(GL_CFLAGS) \
	$(GLU_CFLAGS)
psworlds_LDFLAGS = \
	$(SDL_LIBS) \
	$(SDL_MIXER_LIBS) \
	$(LIBCONFIG_LIBS) \
	$(GL_LIBS) \
	$(GLU_LIBS)
psworlds_SOURCES = \
	alienlight.cpp \
	world.cpp \
	missile.cpp \
	tgaloader.cpp \
	object.cpp \
	computer.cpp \
	matrices.cpp \
	psworlds.cpp \
	torpedo.cpp \
	fonts.cpp \
	cockpit.cpp \
	fighter.cpp \
	camera.cpp \
	homing.cpp \
	sound.cpp \
	outro.cpp \
	texturelist.cpp \
	intro.cpp \
	startscreen.cpp \
	player.cpp \
	mission.cpp \
	direct.cpp \
	building.cpp \
	bitmap.cpp \
	trail.cpp \
	waypoint.cpp \
	menu.cpp \
	briefing.cpp \
	other.cpp \
	displaylistlist.cpp \
	turret.cpp \
	particle.cpp \
	compass.cpp \
	model.cpp \
	utility.cpp \
	headlight.cpp \
	objectlist.cpp \
	building.h \
	waypoint.h \
	mission.h \
	missile.h \
	camera.h \
	tgaloader.h \
	compass.h \
	matrices.h \
	outro.h \
	homing.h \
	trail.h \
	utility.h \
	headlight.h \
	computer.h \
	menu.h \
	world.h \
	model.h \
	turret.h \
	fighter.h \
	intro.h \
	sound.h \
	player.h \
	particle.h \
	torpedo.h \
	alienlight.h \
	objectlist.h \
	fonts.h \
	texturelist.h \
	displaylistlist.h \
	other.h \
	psworlds.h \
	bitmap.h \
	models.h \
	cockpit.h \
	direct.h \
	object.h \
	briefing.h \
	startscreen.h \
	version.h
